dist_man1_MANS=

if BUILD_ULTRACOIND
  dist_man1_MANS+=ultracoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=ultracoin-qt.1
endif

if BUILD_ULTRACOIN_CLI
  dist_man1_MANS+=ultracoin-cli.1
endif

if BUILD_ULTRACOIN_TX
  dist_man1_MANS+=ultracoin-tx.1
endif

if ENABLE_WALLET
if BUILD_ULTRACOIN_WALLET
  dist_man1_MANS+=ultracoin-wallet.1
endif
endif
